--- a/animals.html
+++ b/animals.html
@@ -2761,7 +2761,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": null,
+"download": ["_main.pdf"],
 "toc": {
 "collapse": "section"
 }
