--- a/nervous-systems.html
+++ b/nervous-systems.html
@@ -1492,7 +1492,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": null,
+"download": ["_main.pdf"],
 "toc": {
 "collapse": "section"
 }
