--- a/sensation-receptors-organs-and-systems.html
+++ b/sensation-receptors-organs-and-systems.html
@@ -1580,7 +1580,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": null,
+"download": ["_main.pdf"],
 "toc": {
 "collapse": "section"
 }
